a transparent background will stop a flash of white in dark mode (i think)

--- a/assets/sass/site/_structure.scss
+++ b/assets/sass/site/_structure.scss
@@ -1,7 +1,7 @@
 // Site structure
 // ---------------------------
 body {
-  background: var(--background); }
+  background: transparent; }
 
 // Page specific
 // ---------------------------
